# yt-api-mcp

./: .envrc  .pre-commit-config.yaml  .rules  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.agent/: scratchpad.md
.agent/goals/: scratchpad.md
.agent/goals/02-Semantic-Transcript-Search/: scratchpad.md
.agent/goals/02-Semantic-Transcript-Search/Task-04-Chunker/: scratchpad.md
.agent/goals/05-SovereignStack-YouTube-Channel/: scratchpad.md
.agent/goals/06-Market-Intelligence-Tools/: scratchpad.md
.agent/goals/06-Market-Intelligence-Tools/Task-01-ELT-Module-Structure/: scratchpad.md
.agent/goals/06-Market-Intelligence-Tools/Task-02-Extract-Layer-Caching/: scratchpad.md
.agent/goals/07-Content-Generation-Release-Management/: scratchpad.md
.agent/goals/08-Fix-Transcript-Cache-Retrieval/: mcp-refcache-upstream-bug-report.md  scratchpad.md
.direnv/: flake-profile-1-link
.github/: branch-protection.json  copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  release.yml
.zed/: settings.json
app/: __init__.py  __main__.py  server.py
app/prompts/: __init__.py
app/tools/: __init__.py  cache.py
app/tools/youtube/: search.py
app/tools/youtube/extract/: __init__.py  batch.py  channels.py  comments.py  trending.py  videos.py
app/tools/youtube/intelligence/: __init__.py  benchmarks.py  competition.py  content.py  naming.py  niche.py  trending.py
app/tools/youtube/load/: __init__.py  cache.py  namespaces.py  ttl.py
app/tools/youtube/semantic/: __init__.py  chunker.py  config.py  indexer.py  tools.py
app/tools/youtube/transform/: __init__.py  gaps.py  (+4 more)
docker/: Dockerfile  Dockerfile.base
docs/: README.md
tests/: __init__.py  conftest.py  test_comment_chunker.py  test_semantic_chunker.py  test_semantic_config.py  test_semantic_indexer.py  test_semantic_store.py  test_semantic_tokenizers.py  test_semantic_tools.py  test_server.py  test_tracing.py  test_youtube_client.py  test_youtube_comments.py  test_youtube_live.py  test_youtube_search.py  test_youtube_transcripts.py
